2006-12-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-defbox.c: Use the same default colors as
	GTK+ for both links and visited links; free the colors
	returned by gtk_widget_style_get().

2006-12-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/Makefile.am:
	* data/thai.desktop.in: Add a thai dictionary
	source (#372386, Theppitak Karoonboonyanan)

2006-11-28  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-defbox.c:
	(gdict_defbox_finalize), (follow_if_is_link),
	(defbox_event_after_cb), (set_cursor_if_appropriate),
	(defbox_motion_notify_cb), (defbox_visibility_notify_cb),
	(gdict_defbox_constructor): Update the cursor when hovering
	on a text tagged with the "link" or "visited-link" tags;
	emit the "link-clicked" signal when clicking on a link.
	
	(gdict_defbox_class_init): Add "link-clicked" signal
	definition to GdictDefboxClass.

	(gdict_defbox_init): Use g_object_ref_sink() in lieu of
	g_object_ref() + gtk_object_sink().

	* libgdict/gdict-defbox.h: Add the GdictDefbox::link-clicked
	signal class closure.

	* src/gdict-window.c:
	(gdict_window_link_clicked),
	(gdict_window_constructor): Create a new window in LOOKUP
	mode using the link text.

2006-11-27  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-defbox.h:
	* libgdict/gdict-defbox.c: Add a function for getting the
	currently selected word from the defbox.

	* src/gdict-window.c:
	(gdict_window_cmd_file_new): Automatically lookup the
	selected text when opening a new window. (#166015)

2006-11-27  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-database-chooser.h:
	* libgdict/gdict-database-chooser.c: Add API for selecting
	and unselecting a database using its name; add API for
	setting and getting the current database using its name.

	* libgdict/gdict-strategy-chooser.h:
	* libgdict/gdict-strategy-chooser.c: Ditto for the strategy
	chooser.

	* src/gdict-source-dialog.c: Commit source editing support: