@@ -1,3 +1,9 @@
+2007-01-07  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* src/gdict-sidebar.c: Use GObject::dispose instead
+	of GtkObject::destroy for detaching the menu widget
+	from the toggle button of the side bar.
+
 2006-12-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* libgdict/gdict-defbox.c: Use the same default colors as
